--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@ h2 {
   color: #ff4d6d;
 }
 
-.gallery {
-  display: flex;
-  gap: 8px;
-  justify-content: center;
-  margin: 10px 0;
-}
-
 .gallery img {
   width: 80px;
   height: 80px;
@@ -99,7 +92,7 @@ function yesClick() {
       font-family: Arial;
       text-align: center;
     ">
-      <h1>💖 I love you so much, Mylah 💖<br>Forever my Valentine 🥰</h1>
+      <h1>💖 I love you so much, Mylah Gilmore💖<br>Forever my Valentine 🥰</h1>
     </div>
   `;
 }
@@ -107,4 +100,5 @@ function yesClick() {
 
 </body>
 </
+
 
