--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Mylah 💖</title>
+    <title>to Mylah 💖</title>
     <link rel="stylesheet" href="style.css"> <style>
         /* Ajuste para textos mais longos e sérios */
         .container {
@@ -27,18 +27,20 @@
         <h1>Mylah 💕</h1>
 
         <p class="texto-serio">
-            Escreva aqui o seu texto sério...
-            Você pode pular linhas normalmente que o site vai respeitar o espaço.
-            Exemplo: "Desde que te conheci, percebi que..."
+            Mylah! We haven't known each other for very long, but this time has made me realize that I truly love you. 
+            I don't know if you feel the same way, and you might think I'm talking nonsense, 
+            but I really feel something different when I'm spending time with you. 
+            You are truly very special to me, and I want to build my life and my family with you.
+            And I am willing to fight for this family and for you, I love so much.
         </p>
 
         <img src="photo2.jpg" alt="Nossa Foto" style="width: 80%; border-radius: 15px;">
 
-        <h3 style="margin-top: 30px;">Portanto, eu gostaria de te fazer uma pergunta...</h3>
+        <h3 style="margin-top: 30px;">Therefore, I would like to ask you a question....</h3>
 
         <div class="buttons">
-            <button class="yes-btn" onclick="celebrar()">Sim 💖</button>
-            <button class="no-btn" id="noBtn">Não 😢</button>
+            <button class="yes-btn" onclick="celebrar()">Yes💖</button>
+            <button class="no-btn" id="noBtn">No😢</button>
         </div>
     </div>
 
@@ -54,10 +56,11 @@
         });
 
         function celebrar() {
-            alert("Você me faz a pessoa mais feliz do mundo! Prometo te valorizar todos os dias. ❤️");
+            alert("You make me the happiest person in the world! I promise to cherish you every day.. ❤️");
             // Se quiser redirecionar para uma música ou outra página:
             // window.location.href = "LINK_AQUI";
         }
     </script>
 </body>
 </html>
+
