--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
             I don't know if you feel the same way, and you might think I'm talking nonsense, 
             but I really feel something different when I'm spending time with you. 
             You are truly very special to me, and I want to build my life and my family with you.
-            And I am willing to fight for this family and for you, I love so much.
+            And I am willing to fight for this family and for you, I love so much, I love you much more than my passion for 🍑peach teas🍑 =)
+            REALLY, REALLY LIKE that hahahaha, Joking aside, I really want to make you happy, and I hope that one day we can meet in person,
+            and I want to kiss you! I promise to be a good boyfriend, I promise to take care of you when you need me...
+            I promise to be a good person for you... when you're by my side I'm a happy person.
+            Please don't give up on me! You are one of the best people I've ever met.
         </p>
 
         <img src="photo2.jpg" alt="Nossa Foto" style="width: 80%; border-radius: 15px;">
 
-        <h3 style="margin-top: 30px;">Therefore, I would like to ask you a question....</h3>
+        <h3 style="margin-top: 30px;">Therefore, I would like to ask you a question.... Do you want to be mine?</h3>
 
         <div class="buttons">
             <button class="yes-btn" onclick="celebrar()">Yes💖</button>
@@ -63,4 +67,5 @@
     </script>
 </body>
 </html>
+
 
